--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('org.springframework.boot:spring-boot-starter-social-twitter')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
