--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 debug=true
 spring.thymeleaf.cache=false
+spring.social.twitter.appId= <Consumer Key>
+spring.social.twitter.appSecret= <Consumer Secret>
